# crossby

./: .gitignore  .wade.yml  CONTRIBUTING.md  KNOWLEDGE.md  KNOWLEDGE.ratings.yml  LICENSE  PLAN.md  PR-SUMMARY.md  PUBLISH_PLAN.md  README.md  REVIEW_FIXES.md  pyproject.toml  steps.md
.claude/: settings.json
.claude/skills/: .gitignore
.cursor/: cli.json
.github/workflows/: auto-version.yml  ci.yml  publish.yml  release.yml
scripts/: auto_version.py  check-all.sh  check.sh  fmt.sh  install-hooks.sh  probe_models.py  probe_models.sh  release.sh  setup-worktree.sh  test-e2e.sh  test-live-ai.sh  test-live-probe.sh  test.sh
scripts/hooks/: pre-push
src/crossby/: __init__.py
src/crossby/ai_tools/: __init__.py  antigravity.py  antigravity_cli.py  base.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  model_utils.py  opencode.py  transcript.py  vscode.py
src/crossby/cli/: agents.py  config_cmd.py  convert.py  handoff.py  init.py  launch.py  main.py  stats.py  sync.py
src/crossby/config/: __init__.py  allowlist_util.py  claude_allowlist.py  copilot_hooks.py  cursor_allowlist.py  cursor_hooks.py  defaults.py  detection.py  gemini_hooks.py  hooks_util.py  instructions.py  json_utils.py  linker.py  loader.py  patterns.py  skills.py
src/crossby/data/: __init__.py  models.json
src/crossby/handoff/: __init__.py  _utils.py  models.py  picker.py  prompts.py  summarizer.py  truncate.py  writer.py
src/crossby/hooks/: __init__.py  runtime.py
src/crossby/logging/: __init__.py  setup.py
src/crossby/models/: ai.py  config.py  sync.py
src/crossby/services/: ai_resolution.py  confirm.py  handoff_resolution.py  prompt_delivery.py  sync.py  sync_resolution.py
src/crossby/subagents/: __init__.py  api.py  emitters.py  ir.py  parsers.py  tool_map.py
src/crossby/sync/: __init__.py  agent_models.py  agents.py  base.py  (+21 more)
tests/: live_support.py  test_cli_basics.py
tests/e2e/: _support.py  conftest.py  test_config_contract.py  test_convert_contract.py  test_init_contract.py  test_launch_contract.py  test_stats_contract.py  test_sync_contract.py
tests/live/: test_crossby_live_ai_tools.py  test_crossby_live_probes.py
tests/unit/: test_live_support.py
(+118 files in other folders)
